--- a/dslist/src/main/resources/application-dev.properties
+++ b/dslist/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
-#spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
-#spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+#Faz a criação do banco de dados de forma local para que o projeto possa rodar
+# spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
+# spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
 #É necessário trocar a porta para 5433 para poder conectar o projeto e o banco
 spring.datasource.url=jdbc:postgresql://localhost:5433/dslist
